# backend/src/middlewares/validators/session.validator.ts
@@ -1,0 +1,9 @@
+import { param } from 'express-validator';
+
+export const sessionBookingIdRules = [
+  param('bookingId').isMongoId().withMessage('bookingId must be a valid booking ID'),
+];
+
+export default {
+  sessionBookingIdRules,
+};
